# DeepOthello

./: CMakeLists.txt  main.cpp
